[package]
name = "ribs"
version = "0.1.0"
repository = "https://github.com/declanvk/ribs"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = []

[dependencies]
crossbeam-utils = "0.8.19"
thiserror = "1.0.47"

[target.'cfg(loom)'.dependencies]
loom = "0.7"
